Wrap in a single transaction